refactor: isScrapped,isLiked 반환값 수정